tests/unit/botocore/response_parsing/xml/responses/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "SubnetId": "subnet-812910e8",
                    "NetworkAclId": "acl-8c2910e5",
                    "NetworkAclAssociationId": "aclassoc-832910ea"
                }
            ],
            "NetworkAclId": "acl-8c2910e5",
            "VpcId": "vpc-8d2910e4",
            "Tags": [],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "RuleNumber": 100,
                    "Protocol": "-1",
                    "Egress": true,
                    "RuleAction": "allow"
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "RuleNumber": 32767,
                    "Protocol": "-1",
                    "Egress": true,
                    "RuleAction": "deny"
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "RuleNumber": 100,
                    "Protocol": "-1",
                    "Egress": false,
                    "RuleAction": "allow"
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "RuleNumber": 32767,
                    "Protocol": "-1",
                    "Egress": false,
                    "RuleAction": "deny"
                }
            ],
            "IsDefault": true
        }
    ],
    "ResponseMetadata": {
	"RequestId": "44c81884-4c88-40ef-b6e9-b04d207189c9"
    }
}
